app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *


 *= require_tree .
 *= require_self

 */


/*
 *= require rails_bootstrap_forms
*/

@import "materialize";
@import "materialize/components/color";
$primary: #eceff1;
$primary-light: #e0f7fa;
$secondary: #ff5722;
$secondary-light: #ff7043;
$nav-text: #546e7a;
$btn-green: #8bc34a;
$btn-green-hover: #c5e1a5;
$btn-red: #f44336;
$btn-red-hover: #e57373;
$btn-blue: #2196f3;
$btn-blue-hover: #64b5f6;
$border-color: #C0E8E8;

@mixin landing-position($position) {
  position: relative;
  top: $position;
}


.btn-green {
  background-color: $btn-green;
  &:hover {
    background-color: $btn-green-hover;
  }
}
.btn-blue {
  background-color: $btn-blue;
  &:hover {
    background-color: $btn-blue-hover;
  }
}
.btn-red {
  background-color: $btn-red;
  &:hover {
    background-color: $btn-red-hover;
  }
}
select {
  display: block;
}

/*
NAVBAR
*/
#header-nav {
  background-color: rgba(255,255,255,.9);
  a {
    color: $nav-text;
  }
  .rate-wrapper {
    span {
      position:relative;
      color: $nav-text;
      font-size: .8em;
    }
    .rate-title {
      top: -10px;
      color: #8bc34a;
    }
    .rate {
      top: 10px;
      left: -41px;
      color: #8bc34a;
    }
  }
}
/*
LANDING PAGE
*/
$landing-promo: #eceff1;
$landing-contact: #fbe9e7;
$landing-overlay: rgba(35, 35, 50, 0.6);

.landing-cta,
.landing-promo,
.landing-contact {
  height: 100vh;
  width: 100vw;
}
.cta-overlay {
  height: 100%;
  width: 100%;
  background: $landing-overlay;
}
.landing-cta {
  background: url("https://upload.wikimedia.org/wikipedia/commons/5/5b/Portones_Shopping_Mall.png");
  background-repeat: none;
  background-size: cover;
  background-position: center;
  h2 {
    margin: 0;
  }
  .container {
    @include landing-position(30vh);
    text-align: center;
    color: white;
  }
}

.landing-promo {
  background: $landing-promo;
  .container {
    @include landing-position(30vh);
  }
  .col {
    text-align: center;
  }
}

.landing-contact {
  background: $landing-contact;
  .container {
    @include landing-position(20vh);
  }
  .col {
    text-align: center;
  }
}

/*
LOCATIONS PAGE
*/
$searchInput: #C0E8E8;
.static_pages-locations-wrapper {
  height:92vh;
}
.locations {
  width: 100vw;
  height: 92vh;
  .progress {
    position: absolute;
    top: 50vh;
    left: 15vw;
  }
  #search {
    background-color: $searchInput;
  }
  #googleMap {
    width: 70%;
    height: 100%;
    float:left;
  }
  #googleMapSearch {
    width: 30%;
    height: 100%;
    float:left;
    .googleMapSearch-results {
      height: 90%;
      overflow: scroll;
      .result {
        border-bottom: 1px solid $border-color;
        padding: 15px;
        cursor: pointer;
        margin-bottom: 5px;
      }
    }
  }
}

/*
BUSINESS SHOW
*/
.businesses-show-wrapper {
  h1 {
    margin-top: 0;
  }
  .btn span {
    position: relative;
    bottom: 4px;
    left: 2px;
  }
  .business-description {
    margin: 25px 0;
  }
  .business-description {
    border-bottom: 2px solid $border-color;
    padding-bottom: 20px;
  }
  .business-item-wrapper {
    margin-top: 20px;
    .item-btn-wrapper {
      position: relative;
      bottom: 5px;
      left: 10px;
      .no-wallet {
        font-weight: bold;
      }
    }
    .item-name {
      float: left;
      margin-top: 0;
    }
    .business-item {
      padding: 15px;
    }
  }
}

/*
ITEM FORM
*/
.item-image-submit {
  margin: 20px 0;
}

/*
ITEM EDIT FORM
*/
.edit-form-wrapper {
  margin-top: 35px;
  width: 60vw;
}

.edit-business-form {
  margin-top: 35px;
  margin-bottom: 50px;
  width: 60vw;
}

/*
MEDIA QUERIES
*/
@media (max-width: 992px) {
  .nav-logo {
    display: none;
  }
  #header-nav {
    text-align: center;
    .rate-wrapper {
      position: static;
    }
  }
  .landing-cta {
    height: 90vh;
    h2 {
      /* font-size: 1.5em; */
    }
    h4 {
      /* font-size: 1.5em; */
    }
  }
  .landing-promo {
    height: 115vh;
    .container {
      @include landing-position(10vh);
    }
    .col {
      margin-bottom: 15px;
      h5 {
        font-size: 1.2em;
      }
    }
  }
  .landing-contact {
    height: 115vh;
    .container {
      @include landing-position(10vh);
    }
    .col {
      margin-bottom: 15px;
      h5 {
        font-size: 1.2em;
      }
    }
  }
  #googleMap, #googleMapSearch {
    width: 100vw !important;
    float: none !important;
  }
  #googleMap {
    height: 70vh !important;
  }
  #googleMapSearch {
    max-height: 30vh !important;
    .googleMapSearch-results {
      max-height: 20vh;
    }
    .material-icons {
      position: relative;
      top: 2px;
    }
    .googleMapSearch-results {
      overflow:scroll;
    }
  }
}
@media only screen and (max-device-width: 992px) {
  .nav-logo {
    display: none;
  }
  #header-nav {
    text-align: center;
    .rate-wrapper {
      position: static;
    }
  }
  .landing-cta {
    height: 90vh;
    h2 {
      font-size: 1.5em;
    }
    h4 {
      font-size: 1.5em;
    }
  }
  .landing-promo {
    height: 160vh;
    .container {
      @include landing-position(10vh);
    }
    .col h5 {
      font-size: 1.2em;
    }
  }
  .landing-contact {
    height: 160vh;
    .container {
      @include landing-position(10vh);
    }
    .col h5 {
      font-size: 1.2em;
    }
  }
}

